# tardigrade

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: CODEOWNERS
.github/workflows/: bench.yml  ci.yml  release.yml
bench/: meta.txt  plot.py  plot_scaling.py  results.csv  run-all.sh  run.sh  scaling.csv  scaling.sh
src/: archive.rs  block.rs  chunk.rs  cli.rs  compat.rs  compress.rs  dedup.rs  diff.rs  encrypt.rs  erasure.rs  error.rs  extract.rs  format.rs  fuse_mount.rs  hash.rs  incremental.rs  index.rs  main.rs  merge.rs  metadata.rs  progress.rs  repair.rs  split.rs  temporal.rs  threads.rs  update.rs  verify.rs
tardigrade-skill/: SKILL.md
tests/: integration.rs
